# stm32F746NG

./: Cargo.toml  Readme.md  build.rs  memory.x
.cargo/: config.toml
assets/: bot.raw  img.raw
src/: 2.rs  Displaybase.rs  display.rs  main Kolibri.rs  main.rs  sramattemt.rs  touch.rs  ui.rs
